update css and index with float and footer adjustment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <header>header</header>
     <nav>nav</nav>
+
+<div class="section">
     <section>section
         <article>article
             <h1>h1</h1>
@@ -18,7 +20,16 @@
             <p>p</p>
         </article>
     </section>
+</div>
+
+<div class="aside">
     <aside>aside</aside>
-    <footer
+</div>
+
+<div class="footer">
+        <footer>footer</footer>
+    </div>
+
+
 </body>
 </html>
