update css and index with box  adjustment

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>header</header>
     <nav>nav</nav>
 
-<div class="section">
+
+<div class="box">
     <section>section
         <article>article
             <h1>h1</h1>
@@ -22,9 +23,10 @@
     </section>
 </div>
 
-<div class="aside">
+<div class="box">
     <aside>aside</aside>
 </div>
+
 
 <div class="footer">
         <footer>footer</footer>
