update css and index with main containner

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
+<div class="main-container">
 <body>
     <header>header</header>
     <nav>nav</nav>
 
+<div class="box_grid">
 
 <div class="box">
     <section>section
@@ -27,6 +29,7 @@
     <aside>aside</aside>
 </div>
 
+</div>
 
 <div class="footer">
         <footer>footer</footer>
@@ -34,4 +37,5 @@
 
 
 </body>
+</div>
 </html>
