--- a/index.html
+++ b/index.html
@@ -9,28 +9,35 @@
 </head>
 <div class="main-container">
     <body>
+        <header>
+            header
+        </header>
+        <nav>
+            nav
+        </nav>
 
-    <header>header</header>
-    <nav>nav</nav>
-
-    <div class="box">
-        <section>section
-            <article>article
-                <h1>h1, h2, h3</h1>
-                <p>p</p>
-            </article>
-        </section>
-    </div>
-
-    <div class="box">
-        <aside>aside</aside>
-    </div>
-
-    <div class="footer">
-        <footer>footer</footer>
-    </div>
-
-
-</body>
+        <div class="box">
+            <section>section
+                <article>article
+                    <h1>
+                        h1, h2, h3
+                    </h1>
+                    <p>
+                        p
+                    </p>
+                </article>
+            </section>
+        </div>
+        <div class="box">
+            <aside>
+                aside
+            </aside>
+        </div>
+        <div class="footer">
+            <footer>
+                footer
+            </footer>
+        </div>
+    </body>
 </div>
 </html>
