rewrite entire codes without using class. move old codes to old codes folder

--- a/index.html
+++ b/index.html
@@ -4,41 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
 </head>
-<div class="main-container">
-    <body>
-        <header>
-            header
-        </header>
-        <nav>
-            nav
-        </nav>
+<body>
 
-        <div class="box">
-            <section>section
+    <header>header</header>
+    <nav>nav</nav>
+    <div id="big-box">
+        <div id="left-box">
+            <section>
+                section
                 <article>article
-                    <h1>
-                        h1, h2, h3
-                    </h1>
-                    <p>
-                        p
-                    </p>
+                    <h1>h1,h2,h3</h1>
+                    <p>p</p>
                 </article>
             </section>
         </div>
-        <div class="box">
-            <aside>
-                aside
-            </aside>
+        <div id="right-box">
+            <aside>aside</aside>
         </div>
-        <div class="footer">
-            <footer>
-                footer
-            </footer>
-        </div>
-    </body>
-</div>
+    </div>
+
+    <footer>
+        footer
+    </footer>
+
+</body>
 </html>
