final code clean up

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>header</header>
     <nav>nav</nav>
     <div id="big-box">
-        <div id="left-box">
+        <div>
             <section>
                 section
                 <article>article
@@ -22,7 +22,7 @@
                 </article>
             </section>
         </div>
-        <div id="right-box">
+        <div>
             <aside>aside</aside>
         </div>
     </div>
